# ardent_description

./: CMakeLists.txt  README.md  package.xml
config/: robot_limits.yaml
config/robot/urdf/: CMakeLists.txt  ardent.dae  ardent.gv  ardent.urdf  ardent.urdf.xacro  ardent_hex.xacro  ardent_quad.xacro  ardent_urdf_hex.xacro  ardent_urdf_quad.xacro  camera.xacro  frames.gv  package.xml
include/ardent_description/: hardware_interface.h
launch/: ardent.launch  ardent_gazebo.launch  ardent_rviz.launch  hex_controller.launch  quad_controller.launch
rviz/: ardent_rviz.rviz
src/: hardware_interface.cc
test/: hardware_interface_test.cpp
